--- a/src/style/pages/_login.scss
+++ b/src/style/pages/_login.scss
@@ -46,6 +46,12 @@
                     border: none;
                     padding: 10px;
 
+                    &::placeholder {
+                        color: rgb(115, 138, 138);
+                        font-size: 1.1rem;
+                        font-weight: 500;
+                    }
+
                     &:focus {
                         border: none;
                         outline: none;
