--- a/src/style/pages/_registration.scss
+++ b/src/style/pages/_registration.scss
@@ -1,5 +1,17 @@
-.registration{
-    background: red;
-    .form-container{
-    }
+.registration {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    width: 300px;
+    // height: 200px;
+    background-color: #f0f0f0;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: left;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+    .form-container {}
 }
