--- a/src/style/pages/_login.scss
+++ b/src/style/pages/_login.scss
@@ -8,7 +8,6 @@
             color: red;
             font-weight: 200;
             opacity: 1;
-            // transform: translateX(-300px, 0px);
             transition: .9s ease-in-out;
 
             &:visible {
@@ -21,16 +20,16 @@
                 margin: 12px 0;
             }
 
-            .err {
-                background: rgba(243, 160, 160, 0.637);
-                padding: 5px 12px;
-                color: red;
-                font-weight: 200;
-                opacity: 1;
-                transform: translateX(0);
-                transition: .7s ease-in-out;
-                opacity: 1;
-            }
+            // .err {
+            //     background: rgba(243, 160, 160, 0.637);
+            //     padding: 5px 12px;
+            //     color: red;
+            //     font-weight: 200;
+            //     opacity: 1;
+            //     transform: translateX(0);
+            //     transition: .7s ease-in-out;
+            //     opacity: 1;
+            // }
         }
 
         width: 40%;
@@ -83,7 +82,7 @@
                     color: #221f1fdc;
                     font-weight: 300;
                     text-align: left;
-                    
+
 
                     @media (max-width: 624px) {
                         font-size: 1rem;
