--- a/src/style/pages/_task.scss
+++ b/src/style/pages/_task.scss
@@ -11,10 +11,18 @@
         margin: 12px auto;
 
         input {
-            &:focus{
+            padding: 20px;
+            width: calc(17vw);
+
+            &:focus {
                 border: none;
-                outline: none
-                ;
+                outline: none;
+            }
+
+            &::placeholder {
+                border-bottom: 1px solid rgba(5, 5, 5, 0.452);
+                padding: 9px auto;
+
             }
         }
 
